--- a/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flightPrice/flightPriceCreate.html
+++ b/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flightPrice/flightPriceCreate.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="box">
             <div class="col-lg-12 text-center">
-                <h1 class="brand-name">Create flight price >>>>>>> TODO!!</h1>
+                <h1 class="brand-name">Create flight price</h1>
                 <hr class="tagline-divider">
             </div>
         </div>
@@ -31,56 +31,160 @@
                             Flight code
                         </td>
                         <td>
-                             <span editable-text="flight.code" onbeforesave="">{{flight.code || 'Set flight code' }}</span> 
+                            <select ng-model="flight" ng-options="flight.code for flight in flights track by flight.code" ></select>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            Departure time
+                            Adult
                         </td>
                         <td>
-                             <span editable-text="flight.departure" onbeforesave="">{{flight.departure || 'Set departure time' }}</span> 
+                             <span editable-text="flightPrice.adult" onbeforesave="">{{flightPrice.adult || '0' }}</span> 
                         </td>
-                    </tr>
+                    </tr>   
                     <tr>
                         <td>
-                            Arrival time
+                            Teen
                         </td>
                         <td>
-                             <span editable-text="flight.arrival" onbeforesave="">{{flight.arrival || 'Set arrival time' }}</span> 
+                             <span editable-text="flightPrice.teen" onbeforesave="">{{flightPrice.teen || '0' }}</span> 
                         </td>
-                    </tr>
+                    </tr>   
                     <tr>
                         <td>
-                            From
+                            Child
                         </td>
                         <td>
-                             <span editable-text="flight.airportByAirportFromId" onbeforesave="">{{flight.airportByAirportFromId || 'Set departure airport' }}</span> 
+                             <span editable-text="flightPrice.child" onbeforesave="">{{flightPrice.child || '0' }}</span> 
                         </td>
-                    </tr>
+                    </tr>   
                     <tr>
                         <td>
-                            To
+                            Baggage A
                         </td>
                         <td>
-                             <span editable-text="flight.airportByAirportToId" onbeforesave="">{{flight.airportByAirportToId || 'Set arrival airport' }}</span> 
+                             <span editable-text="flightPrice.baggageA" onbeforesave="">{{flightPrice.baggageA || '0' }}</span> 
                         </td>
-                    </tr>
+                    </tr>   
                     <tr>
                         <td>
-                            Plane
+                            Baggage B
                         </td>
                         <td>
-                             <span editable-text="flight.plane" onbeforesave="">{{flight.plane || 'Set plane' }}</span> 
+                             <span editable-text="flightPrice.baggageB" onbeforesave="">{{flightPrice.baggageB || '0' }}</span> 
                         </td>
-                    </tr>                   
+                    </tr>   
+                    <tr>
+                        <td>
+                            Baggage C
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.baggageC" onbeforesave="">{{flightPrice.baggageC || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            Baggage D
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.baggageD" onbeforesave="">{{flightPrice.baggageD || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            Baggage E
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.baggageE" onbeforesave="">{{flightPrice.baggageE || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            Musical equipment
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.baggageMusical" onbeforesave="">{{flightPrice.baggageMusical || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            Sport equipment
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.baggageSport" onbeforesave="">{{flightPrice.baggageSport || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            1st class
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.firstClass" onbeforesave="">{{flightPrice.firstClass || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            2nd class
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.secondClass" onbeforesave="">{{flightPrice.secondClass || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            Business class
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.businessClass" onbeforesave="">{{flightPrice.businessClass || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            Economy class
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.economyClass" onbeforesave="">{{flightPrice.economyClass || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            Payment fee
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.paymentFee" onbeforesave="">{{flightPrice.paymentFee || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            Airport tax fee
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.airportTaxFee" onbeforesave="">{{flightPrice.airportTaxFee || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            SMS info
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.smsFlightInfo" onbeforesave="">{{flightPrice.smsFlightInfo || '0' }}</span> 
+                        </td>
+                    </tr>   
+                    <tr>
+                        <td>
+                            Offline check-in
+                        </td>
+                        <td>
+                             <span editable-text="flightPrice.offlineCheckIn" onbeforesave="">{{flightPrice.offlineCheckIn || '0' }}</span> 
+                        </td>
+                    </tr>   
                 </table>
                 <center>
-                    <button type="button" class="btn btn-success" ng-click="createFlight()">
+                    <button type="button" class="btn btn-success" ng-click="createFlightPrice()">
                         Create flight
                     </button>
-                    <button type="button" class="btn btn-info" ng-click="goToFlightList()">
-                        Back to flight list
+                    <button type="button" class="btn btn-info" ng-click="goToFlightPriceList()">
+                        Back to flight price list
                     </button>
                 </center>
             </div>
