flight, flightPrice, airport create + bug fixes

--- a/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flightPrice/flightPriceCreate.html
+++ b/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flightPrice/flightPriceCreate.html
@@ -31,7 +31,7 @@
                             Flight code
                         </td>
                         <td>
-                            <select ng-model="flight" ng-options="flight.code for flight in flights track by flight.code" ></select>
+                            <select ng-model="flight" ng-options="flight.code for flight in flights track by flight.code" required></select>
                         </td>
                     </tr>
                     <tr>
