--- a/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flight/flightCreate.html
+++ b/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flight/flightCreate.html
@@ -1,4 +1,9 @@
-<div class="container">
+<style>
+      .form-control text-center ng-pristine ng-valid ng-valid-maxlength ng-touched {
+        width: 25px;
+      }
+    </style>
+    <div class="container">
     <div class="row">
         <div class="box">
             <div class="col-lg-12 text-center">
@@ -18,7 +23,7 @@
                 <table align="center" style="width:1000px" class="table table-striped table-bordered table-hover table-condensed">
                     <thead>
                         <tr style="background-color: #a68a88; font-weight: bold">
-                            <td>
+                            <td style="width: 20%;">
                                 Property
                             </td>
                             <td>
@@ -39,7 +44,12 @@
                             Departure time
                         </td>
                         <td>
-                             <span editable-text="flight.departure" onbeforesave="">{{flight.departure || 'Set departure time' }}</span> 
+                            <p style="display: table; width: 234px;">
+                                <input type="text" class="form-control" datetime-picker="dd.MM.yyyy HH:mm" ng-model="flight.departure" is-open="open.departure" style="width: 200px;" />
+                                <span class="input-group-btn">
+                                    <button type="button" class="btn btn-default" ng-click="openDepartureCalendar($event, 'departure')"><i class="glyphicon glyphicon-calendar"></i></button>
+                                </span>
+                            </p>
                         </td>
                     </tr>
                     <tr>
@@ -47,7 +57,12 @@
                             Arrival time
                         </td>
                         <td>
-                             <span editable-text="flight.arrival" onbeforesave="">{{flight.arrival || 'Set arrival time' }}</span> 
+                            <p style="display: table; width: 234px;">
+                                <input type="text" class="form-control" datetime-picker="dd.MM.yyyy HH:mm" ng-model="flight.arrival" is-open="open.arrival" style="width: 200px;" />
+                                <span class="input-group-btn">
+                                    <button type="button" class="btn btn-default" ng-click="openArrivalCalendar($event, 'arrival')"><i class="glyphicon glyphicon-calendar"></i></button>
+                                </span>
+                            </p>
                         </td>
                     </tr>
                     <tr>
@@ -55,15 +70,15 @@
                             From
                         </td>
                         <td>
-                             <span editable-text="flight.airportByAirportFromId" onbeforesave="">{{flight.airportByAirportFromId || 'Set departure airport' }}</span> 
+                            <select ng-model="airportByAirportFromId" ng-options="airport.name for airport in airports track by airport.name" class="form-control" style="width: 400px;" required></select>
                         </td>
                     </tr>
                     <tr>
-                        <td>
+                        <td> 
                             To
                         </td>
                         <td>
-                             <span editable-text="flight.airportByAirportToId" onbeforesave="">{{flight.airportByAirportToId || 'Set arrival airport' }}</span> 
+                            <select ng-model="airportByAirportToId" ng-options="airport.name for airport in airports track by airport.name" class="form-control" style="width: 400px;" required></select>
                         </td>
                     </tr>
                     <tr>
@@ -71,7 +86,7 @@
                             Plane
                         </td>
                         <td>
-                             <span editable-text="flight.plane" onbeforesave="">{{flight.plane || 'Set plane' }}</span> 
+                             <span editable-text="flight.plane" onbeforesave="">{{flight.plane || 'Set plane' }}</span> TODO
                         </td>
                     </tr>                   
                 </table>
