--- a/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flightPrice/flightPriceDetail.html
+++ b/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flightPrice/flightPriceDetail.html
@@ -64,6 +64,9 @@
                     <button type="button" class="btn btn-info" ng-click="goToFlightPriceList()">
                         Back to list of flight prices
                     </button>
+                    <button type="button" class="btn btn-danger" ng-click="deleteFlightPrice(flightPrice)">
+                        Remove flight price
+                    </button>
                 </center>
             </div>
         </div>
