--- a/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/ticketReservation/ticketReservation.html
+++ b/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/ticketReservation/ticketReservation.html
@@ -185,6 +185,7 @@
 
                                 <button type="submit" class="btn btn-default" ng-click="$parent.$parent.accordianOpen1 = !$parent.$parent.accordianOpen1"><i class="glyphicon glyphicon-chevron-left"></i> Previous</button>
                                 <button type="submit" class="btn btn-primary" ng-click="save()">{{saveButtonText}}</button>
+                                <button type="submit" class="btn btn-danger" ng-click="delete()">Delete ticket</button>
                             </accordion-group>
                         </accordion>
                     </fieldset>
@@ -195,8 +196,9 @@
     <div class="row" ng-hide="showTicketForm">
         <div class="box">
             <div class="col-lg-12">
-                <button type="submit" class="btn btn-primary" ng-show="flightId == undefined" ng-click="goToSearch">Search flight</button>
-                <button type="submit" class="btn btn-primary" ng-show="ticketsLength() > 0" ng-click="reserveTickets()">Book ticket(s)</button>
+                <button type="submit" class="btn btn-primary" ng-click="goToSearch()">Search flight</button>
+                <button type="submit" class="btn btn-primary" ng-click="nextTicketForThisFlight()">Next ticket for same flight</button>
+                <button type="submit" class="btn btn-success" ng-show="ticketsLength() > 0" ng-click="reserveTickets()">Book ticket(s)</button>
             </div>
         </div>
     </div>
