--- a/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flightPrice/flightPriceCreate.html
+++ b/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flightPrice/flightPriceCreate.html
@@ -181,7 +181,7 @@
                 </table>
                 <center>
                     <button type="button" class="btn btn-success" ng-click="createFlightPrice()">
-                        Create flight
+                        Create flight price
                     </button>
                     <button type="button" class="btn btn-info" ng-click="goToFlightPriceList()">
                         Back to flight price list
