--- a/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flightPrice/flightPriceList.html
+++ b/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/flightPrice/flightPriceList.html
@@ -14,7 +14,7 @@
                     <thead>
                         <tr style="background-color: #a68a88; font-weight: bold">
                             <td ng-click="sortByField('flight.code')">
-                                Flight code
+                                Flight codes
                                 <span  ng-class="getOrderIcon('flight.code')"/>
                             </td>
                             <td ng-click="sortByField('adult')">
