--- a/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/homepage/searchResults.html
+++ b/AirTicketBookingSystem/AirTicketBookingSystem-Web/src/main/webapp/angular/homepage/searchResults.html
@@ -13,10 +13,6 @@
                 <table align="center" style="width:1000px" class="table table-striped table-bordered table-hover table-condensed">
                     <thead>
                         <tr style="background-color: #a68a88; font-weight: bold">
-                            <td ng-click="sortByField('code')">
-                                Code
-                                <span  ng-class="getOrderIcon('code')"/>
-                            </td>
                             <td ng-click="sortByField('from')">
                                 From
                                 <span  ng-class="getOrderIcon('from')"/>
@@ -34,17 +30,14 @@
                                 <span  ng-class="getOrderIcon('arrival')"/>
                             </td>
                             <td>
-                                Plane Type / Code
+                                Price
                             </td>
                             <td>
-                                Show details
+                                Buy tickets
                             </td>
                         </tr>
                     </thead>
                     <tr ng-repeat="flight in flights | filter:searchText | orderBy:orderByField:reverseSort">
-                        <td>
-                            {{flight.code}}
-                        </td>
                         <td>
                             {{flight.airportByAirportFromId.name}}
                         </td>
@@ -58,10 +51,16 @@
                             {{flight.arrival | date:'dd.MM.yyyy HH:mm:ss'}}
                         </td>
                         <td>
-                            {{flight.plane.type}} / {{flight.plane.code}}
+                            {{  (searchQuery.type == 0 ? (flight.flightPrices[0].economyClass + flight.flightPrices[0].secondClass): 
+                                searchQuery.type == 1 ? (flight.flightPrices[0].economyClass + flight.flightPrices[0].firstClass) : 
+                                searchQuery.type == 2 ? (flight.flightPrices[0].businessClass + flight.flightPrices[0].firstClass) : '') + 
+                                (flight.flightPrices[0].adult * searchQuery.adults) + 
+                                (flight.flightPrices[0].teen * searchQuery.teens) + 
+                                (flight.flightPrices[0].child * searchQuery.children) 
+                                || '0'}} €
                         </td>
                         <td>
-                            <a href="" ng-click="showFlightDetail(flight.id)">Detail</a>
+                            <a href="" ng-click="buyTicket(flight.id)">BUY</a>
                         </td>
                     </tr>
                 </table>
